<resources>
    <!-- owncloud/nextcloud -->
    <string name="app_name">Nextcloud Bookmarks</string>
    <string name="app_name_short">Bookmarks</string>
    <string name="oc_bookmark_login"></string>

    <!-- persistend stuff -->
    <string name="action_change_login">Change Login</string>
    <string name="tags">Tags</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="loginUserHint">Username</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginUrlHint">Server address https://&#8230;</string>
    <string name="connect">Sign in</string>
    <string name="connect_sso">Nextcloud Single Sign On (SSO)</string>
    <string name="login_manual">Login</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="sure_to_delete_bookmark">Delete this bookmark?</string>
    <string name="bookmark_url_hint">URL</string>
    <string name="bookmark_title_hint">Title</string>
    <string name="bookmark_description_hint">Description</string>
    <string name="edit_tag">Edit tag</string>
    <string name="cancel">Cancel</string>
    <string name="add_tags">Add tags</string>
    <string name="sure_to_delete_tag">Delete this tag?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="could_not_update_tag">Could not update tag.</string>
    <string name="could_not_delete_tag">Could not delete tag.</string>
    <string name="no_url_entered">No URL Entered</string>
    <string name="no_title_entered">No title Entered</string>
    <string name="could_not_add_bookmark">Could not add bookmark</string>
    <string name="could_not_change_bookmark">Could not change bookmark</string>
    <string name="could_not_delete_bookmark">Could not delete bookmark</string>
    <string name="not_yet_logged_in">You are not yet logged in.</string>
    <string name="bookmark_saved">Bookmark saved</string>
    <string name="reload_icons">Reload Icons</string>
    <string name="backup_data">Backup Bookmarks to File</string>
    <string name="connectino_failed">Connection Failed</string>
    <string name="content_desc_tap_to_refresh">tap to refresh</string>

    <!-- login errors -->
    <string name="connection_failed_login">Connection Failed. Check if\n &#x2022; You have internet access\n &#x2022; the URL is correct.\n &#x2022; you imported self signed certificates.</string>
    <string name="login_host_not_found">Connection Failed. Check if\n &#x2022; You entered the right URL.</string>
    <string name="login_failed">Login Failed. Check if\n &#x2022; The URL is correct.\n &#x2022; username/password is correct.\n &#x2022; Bookmark App v0.10.1 or\n higher is installed on your Nextcloud</string>
    <string name="login_timeout">Connection Failed. Check if\n &#x2022; you have internet access.\n &#x2022; the URL is correct.\n &#x2022; you entered the right port number.</string>
    <string name="sso_failed">Could not connect via SSO. Please check that the Nextcloud app is up to date and try to delete storage of both, Nextcloud and Bookmarks in case the issue persists.</string>
    <string name="email_subject">NextCloud BookMarks Help!</string>
    <string name="email_body">Please Explain the issue Below</string>
    <string name="support_email">support@nextcloud-bookmarks.com</string>
    <string name="send_email">Send Email</string>
    <string name="E_mail">E-mail</string>
    <string name="content_desc_show_password">show password</string>

    <!-- backup result messages -->
    <string name="backup_successful">Bookmarks backed up to %1s</string>
    <string name="backup_failed">Failed to create backup of bookmarks</string>
    <string name="new_tag">New tag</string>
    <string name="share_target_quick">Quickadd</string>
    <string name="share_target_normal">Add to Bookmarks</string>
    <string name="nav_drawer_tags_header">Tags</string>
    <string name="settings">Settings</string>
    <string name="nav_open">Open Drawer</string>
    <string name="nav_close">Close Drawer</string>
    <string name="login_error_no_bookmarks_api">Bookmark-App not installed in the selected server.</string>
    <string name="search_in_all">Search...</string>
    <string name="search_active">Searching:</string>
</resources>
