<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.schabi.ocbookmarks.MainActivity">
    <item
        android:id="@+id/action_change_login"
        android:title="@string/action_change_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reload_icons"
        android:title="@string/reload_icons"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_backup_data"
        android:title="@string/backup_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/id_action_close_all"
        android:icon="@drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="delete"
        app:showAsAction="ifRoom"/>
</menu>
