<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.schabi.ocbookmarks.LoginAcitivty"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/starImageView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                app:srcCompat="@drawable/star_new"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:focusableInTouchMode="true"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/urlInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="27dp"
                android:layout_below="@id/starImageView">

            <EditText
                android:id="@+id/urlInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:hint="@string/loginUrlHint"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                app:counterOverflowTextColor="@android:color/white"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_marginTop="55dp"
                android:layout_below="@+id/urlInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/loginUserHint"
                android:inputType="text"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userInputLayout">

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/loginPasswordHint"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/loginErrorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordInputLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:text="Login Failed"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/login_error_color"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgView_ShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/passwordInputLayout"
                android:layout_alignEnd="@+id/passwordInputLayout"
                android:layout_alignBottom="@+id/passwordInputLayout"
                android:layout_gravity="end"
                android:contentDescription="@string/content_desc_show_password"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/ic_action_visibility"
                android:layout_alignRight="@+id/passwordInputLayout" />

            <Button
                android:id="@+id/connectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:layout_below="@id/loginErrorView"
                android:layout_centerHorizontal="true"
                android:padding="16dp"
                android:layout_marginTop="18dp"
                android:text="@string/connect" />

            <Button
                android:id="@+id/ssoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:layout_below="@id/connectButton"
                android:layout_centerHorizontal="true"
                android:padding="16dp"
                android:layout_marginTop="18dp"
                android:text="@string/connect_sso" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginErrorView"
                android:layout_marginTop="18dp"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>
